tests/error/bad_string.py
"I'm a little teapot! short and stout

r"Here is my handle, here is my squishy
" A bad string!!!!!

"A good string!!!!!"; "LALALALALALA";
